# vflow

./: README.md  pyproject.toml  ruff.toml
src/package_name/: __init__.py  module_1.py  module_2.py
src/package_name/subpackage_name/: __init__.py  submodule_1.py
src/vflow/: __init__.py  _version.py  read_video.py  video.py
src/vflow/data_schema/: video_info.py
src/vflow/enum/: __init__.py  video_format.py
tutorial/: 00_read_video_from_mp4_at_once.py  01_read_video_from_mp4_frame_by_frame.py
