[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package_name"
version = "0.0.1"
description = "A package description"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas"
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]
test = ["pytest>=6.0", "pytest-cov"]

[project.urls]
homepage = "https://github.com/YourUsername/package_name"
documentation = "https://github.com/YourUsername/package_name/docs"
repository = "https://github.com/YourUsername/package_name"
