[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vflow"
version = "0.0.1"
description = "A package description"
authors = [{ name = "Minkyu Choi", email = "minkyu.choi@coargus.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
]

[project.optional-dependencies]
dev = ["black", "flake8", "mypy"]
test = ["pytest>=6.0", "pytest-cov"]

[project.urls]
homepage = "https://github.com/Coargus/vflow"
documentation = "https://github.com/Coargus/vflow/docs"
repository = "https://github.com/Coargus/vflow"
